--- a/blog.html
+++ b/blog.html
@@ -148,7 +148,7 @@
   <p class="card-body">
     ¿Que son? ¿Por qué tengo que saber sobre ellos? ¿Donde y como elegir el indicado
   </p>
-  <p class="card-footer">ir al <a href="/blog/dominio-hosting.html" class="by-name">articulo</a></p>
+  <p class="card-footer">ir al <a href="/blog/dominio-hosting.html" target="_blank" class="by-name">articulo</a></p>
 </div>
             </div>
             <div class="col-lg-3 col-md-6">
@@ -158,7 +158,7 @@
   <p class="card-body">
     Que tipo de página web necesito y porque es indispensable tenerla?
   </p>
-  <p class="card-footer">ir al <a href="/blog/beneficios-pagina-web.html" class="by-name">articulo</a></p>
+  <p class="card-footer">ir al <a href="/blog/beneficios-pagina-web.html" target="_blank" class="by-name">articulo</a></p>
 </div>
             </div>
             <div class="col-lg-3 col-md-6">
