arreglo link nav

--- a/blog.html
+++ b/blog.html
@@ -63,7 +63,7 @@
 
 
     <header class="" id="header"> 
-     <nav class="navbar navbar-expand-lg" id="nav">  
+     <nav class="navbar navbar-expand-lg" data-bs-theme="dark" id="nav">  
           <div class="container">
             
             <a href="https://blankfile.com.ar" class="navbar-brand"><img src="assets/blank-logo.png" alt="blank file web logo" class="logo"></a>
@@ -141,25 +141,30 @@
       <section class="articulos pt-3">
         <div class="container">
           <div class="row">
+
             <div class="col-lg-3 col-md-6">
+              <a href="/blog/dominio-hosting.html" target="_blank" class="by-name">
               <div class="card">
   <div class="card-image"> <img class="" src="/assets/dom-host.png" alt="dominios y hosting"></div>
   <p class="card-title">Dominios y hosting</p>
   <p class="card-body">
     ¿Que son? ¿Por qué tengo que saber sobre ellos? ¿Donde y como elegir el indicado
   </p>
-  <p class="card-footer">ir al <a href="/blog/dominio-hosting.html" target="_blank" class="by-name">articulo</a></p>
-</div>
+  <p class="card-footer">ir al articulo</p>
+</div></a>
             </div>
+
+          
             <div class="col-lg-3 col-md-6">
+              <a href="/blog/beneficios-pagina-web.html" target="_blank" class="by-name">
               <div class="card">
   <div class="card-image"><img src="/assets/www.png" alt="pagina web"></div>
   <p class="card-title">Beneficios de tener una pagina web</p>
   <p class="card-body">
     Que tipo de página web necesito y porque es indispensable tenerla?
   </p>
-  <p class="card-footer">ir al <a href="/blog/beneficios-pagina-web.html" target="_blank" class="by-name">articulo</a></p>
-</div>
+  <p class="card-footer">ir al articulo</p>
+</div></a>
             </div>
             <div class="col-lg-3 col-md-6">
               <div class="card">
