--- a/contacto.html
+++ b/contacto.html
@@ -61,7 +61,7 @@
         </button>
 
     <header class="" id="header"> 
-     <nav class="navbar navbar-expand-lg" id="nav">  
+     <nav class="navbar navbar-expand-lg" data-bs-theme="dark" id="nav">  
           <div class="container">
             
             <a href="https://blankfile.com.ar" class="navbar-brand"><img src="assets/blank-logo.png" alt="crear pagina web logo" class="logo"></a>
