--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
     <header class="" id="header"> 
-     <nav class="navbar navbar-expand-lg" id="nav">  
+     <nav class="navbar navbar-expand-lg  " data-bs-theme="dark" id="nav">  
           <div class="container">
             
             <a href="https://blankfile.com.ar" class="navbar-brand">
