--- a/blog.html
+++ b/blog.html
@@ -145,12 +145,13 @@
             <div class="col-lg-3 col-md-6">
               <a href="/blog/dominio-hosting.html" target="_blank" class="by-name">
               <div class="card">
-  <div class="card-image"> <img class="" src="/assets/dom-host.png" alt="dominios y hosting"></div>
+  <div class="card-image"> <img class="img-fluid" src="/assets/dom-host.png" alt="dominios y hosting"></div>
   <p class="card-title">Dominios y hosting</p>
   <p class="card-body">
-    ¿Que son? ¿Por qué tengo que saber sobre ellos? ¿Donde y como elegir el indicado
+    Imagina el dominio como la dirección de tu casa en el vasto vecindario de Internet. 
+                    Es lo que las personas escriben en la barra de direcciones de su navegador para llegar 
+                    a tu sitio web... ver mas
   </p>
-  <p class="card-footer">ir al articulo</p>
 </div></a>
             </div>
 
@@ -158,12 +159,13 @@
             <div class="col-lg-3 col-md-6">
               <a href="/blog/beneficios-pagina-web.html" target="_blank" class="by-name">
               <div class="card">
-  <div class="card-image"><img src="/assets/www.png" alt="pagina web"></div>
+  <div class="card-image"><img class="img-fluid" src="/assets/www.png" alt="pagina web"></div>
   <p class="card-title">Beneficios de tener una pagina web</p>
   <p class="card-body">
-    Que tipo de página web necesito y porque es indispensable tenerla?
+    En la era digital en la que vivimos, la presencia en línea se ha convertido 
+                    en un activo invaluable tanto para individuos como para empresas... Ver mas
+                    
   </p>
-  <p class="card-footer">ir al articulo</p>
 </div></a>
             </div>
             <div class="col-lg-3 col-md-6">
@@ -250,7 +252,7 @@
   <script src="js/nav.js"></script>
   <script src="js/show.js"></script>
   <script src="js/readmore.js"></script>
-  <script src="js/nocturnemode.js"></script>
+
 
 </body>
 </html>
