--- a/index.html
+++ b/index.html
@@ -382,8 +382,10 @@
           <h4>Precio</h4>
           <p>
             Creemos que la calidad no debe comprometerse por el costo, 
-            y trabajamos para brindar un excelente valor por tu inversión.
-            Nos ajustamos a tu presupuesto sin bajar la calidad del producto.
+            trabajamos para brindar un excelente valor por tu inversión.
+            Nos ajustamos a tu presupuesto y
+            te guiamos en la eleccion de la web que necesitas.
+            
           </p>
         </div>
 
