agregado blof redes

--- a/blog.html
+++ b/blog.html
@@ -168,6 +168,19 @@
   </p>
 </div></a>
             </div>
+
+            <div class="col-lg-3 col-md-6">
+              <a href="/blog/redes-sociales-impacto.html" class="by-name">
+              <div class="card">
+  <div class="card-image"><img src="/assets/redes.png" alt="redes sociales"></div>
+  <p class="card-title">El impacto y la importancia de las redes sociales para tu negocio</p>
+  <p class="card-body">
+   ...El papel de las redes sociales en el éxito de un negocio y su presencia en línea es innegable.
+  </p>
+</div>
+</a>
+            </div>
+
             <div class="col-lg-3 col-md-6">
               <div class="card">
   <div class="card-image"><img src="/assets/com-ar.png" alt="com.ar"></div>
@@ -178,16 +191,7 @@
      <p class="card-footer">ir al <a href="#" class="by-name">articulo</a></p>
 </div>
             </div> 
-            <div class="col-lg-3 col-md-6">
-              <div class="card">
-  <div class="card-image"></div>
-  <p class="card-title">La importancia de las redes sociales para tu negocio</p>
-  <p class="card-body">
-  Proximamente 
-  </p>
-  <p class="card-footer">ir al <a href="#" class="by-name">articulo</a></p>
-</div>
-            </div>
+
           </div>
         </div>
       </section>
