--- a/index.html
+++ b/index.html
@@ -500,7 +500,10 @@
           <p class="titlt">Redes Sociales</p>
           <p class="text">El impacto de las redes sociales en tu negocio y tu pagina web
           </p><div class="overlay"></div>
-          <button class="art-btn">Click</button>
+          <a href="/blog/redes-sociales-impacto.html">
+            <button class="art-btn">Click</button>
+          </a>
+          
         </div>
       </div>
       <div class="col-lg-3 col-md-6 col-sm-10">
