--- a/index.html
+++ b/index.html
@@ -600,7 +600,11 @@
                 <div class="col-lg-5">
                 <p class="py-4">
                    Como vos, estamos creciendo, nos estamos expandiendo y queremos que seas parte de esto. 
+                   <br>
+                   <br>
                    
+                    Servicios de Marketing digital y Desarrollo web. <br>
+                    B° Cabildo - Cordoba capital, Argentina.
                 </p>
             </div>
             
