--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                       ¿Tienes una idea<br> en mente?</h3>
                       <hr>
                       <p>
-                        Estamos listos para ayudarte, asesorarte y darle vida a tu proyecto. 
+                        Estamos listos para ayudarte,<span> asesorarte de forma gratuita</span> y darle vida a tu proyecto. 
                       </p>
                        
               </div>
