--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -241,7 +241,7 @@
                       ¿Tienes una idea<br> en mente?</h3>
                       <hr>
                       <p>
-                        Si estas listo, escribenos para darle vida. 
+                        Estamos listos para ayudarte,<span> asesorarte de forma gratuita</span> y darle vida a tu proyecto.
                       </p>
                        
               </div>
