--- a/blog.html
+++ b/blog.html
@@ -102,8 +102,8 @@
               <a href="https://www.facebook.com/blankfiledd" target="_blank"><i class="bi bi-facebook px-2  fs-2"></i></a>
               <a href="https://api.whatsapp.com/send?phone=+5493521531997&amp;text= Quiero mi pagina web : "
               target="_blank""><i class="bi bi-whatsapp px-2  fs-2"></i></a>
-              <a href=""><i class="bi bi-instagram px-2 fs-2"></i></a>
-              <a href=""><i class="bi bi-linkedin px-2 fs-2"></i></a>
+              <a href="https://www.instagram.com/blankfileweb/" target="_blank"><i class="bi bi-instagram px-2 fs-2"></i></a>
+              <a href="https://www.linkedin.com/in/blank-file-dise%C3%B1o-web-776462289/" target="_blank"><i class="bi bi-linkedin px-2 fs-2"></i></a>
             </div>
           </div>
         </section>
