color hover redes off canvas

--- a/blog.html
+++ b/blog.html
@@ -99,11 +99,11 @@
 
             <div class="d-lg-none align-self-center py-5 ">
               
-              <a href="https://www.facebook.com/blankfiledd" target="_blank"><i class="bi bi-facebook px-2  fs-2"></i></a>
-              <a href="https://api.whatsapp.com/send?phone=+5493521531997&amp;text= Quiero mi pagina web : "
+              <a class="facebook" href="https://www.facebook.com/blankfiledd" target="_blank"><i class="bi bi-facebook px-2  fs-2"></i></a>
+              <a class="wpp" href="https://api.whatsapp.com/send?phone=+5493521531997&amp;text= Quiero mi pagina web : "
               target="_blank""><i class="bi bi-whatsapp px-2  fs-2"></i></a>
-              <a href="https://www.instagram.com/blankfileweb/" target="_blank"><i class="bi bi-instagram px-2 fs-2"></i></a>
-              <a href="https://www.linkedin.com/in/blank-file-dise%C3%B1o-web-776462289/" target="_blank"><i class="bi bi-linkedin px-2 fs-2"></i></a>
+              <a class="inst" href="https://www.instagram.com/blankfileweb/" target="_blank"><i class="bi bi-instagram px-2 fs-2"></i></a>
+              <a class="in" href="https://www.linkedin.com/in/blank-file-dise%C3%B1o-web-776462289/" target="_blank"><i class="bi bi-linkedin px-2 fs-2"></i></a>
             </div>
           </div>
         </section>
