--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <!-- OFFCANVAS MAIN CONTAINER START -->
         <section class="offcanvas offcanvas-start" id="menuLateral" tabindex="-1">
           <div class="offcanvas-header" data-bs-theme="dark">
-            <a class="offcanvas-title"><img src="assets/blank-logo.png" alt="crear pagina web logo "></a>
+            <a class="offcanvas-title"><img src="assets/blank-logo.png" alt="diseño web en cordoba "></a>
             <button class="btn-close" type="button" aria-label="Close" data-bs-dismiss="offcanvas"></button>
           </div>
           <!-- OFF CANVAS MENU LINKS  START-->
