--- a/index.html
+++ b/index.html
@@ -450,9 +450,15 @@
                           <hr>
                  
 
-                      <div class="row work-galery text-center low">
-                      <div class="col-lg-4 col-md-6 py-3"><a href="https://argonautasrock.com.ar" target="_blank"><img class="" loading="lazy" src="assets/argo-mock.png" alt="argonautas"><h6>Argonautas</h6></a></div>
-                      <div class="col-lg-4 col-md-6 py-3"><a href="https://cooperativaomega.com.ar" target="_blank"><img class="" loading="lazy" src="assets/coop-mock.png" alt="omega seguridad"><h6>Cooperativa omega</h6></a></div>
+                      <div class="row work-galery text-center">
+                      <div class="col-lg-4 col-md-6 py-3">
+                        <a href="https://argonautasrock.com.ar" target="_blank">
+                        <img class="" loading="lazy" src="assets/argo-mock.png" alt="argonautas"><h6>Argonautas</h6></a>
+                      </div>
+                      <div class="col-lg-4 col-md-6 py-3">
+                        <a href="https://cooperativaomega.com.ar" target="_blank">
+                        <img class="" loading="lazy" src="assets/coop-mock.png" alt="omega seguridad"><h6>Cooperativa omega</h6></a>
+                      </div>
                       
                       </div>
             </div>
