changes img logo

--- a/contacto.html
+++ b/contacto.html
@@ -203,7 +203,7 @@
   <div class="footer-main row pt-4">
 
     <div class=" col-lg-4 col-md-3">
-      <img class="img-fluid" src="assets/blank-logo.png" alt="footer diseño web logo">
+      <img class="img-fluid" src="assets/blank-logo-f.png" alt="footer diseño web logo">
       </div>
       <div class="col-lg-4 col-md-3">
       <p class="py-4">
