diseño web en cba

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="index, follow">
     <meta name="title" content="Blank file">
   
-    <meta name="keywords" content="blog, marketing digital,crear pagina web, diseño web, paginas web, sitios web, ">
+    <meta name="keywords" content="diseño web en cordoba, blog, marketing digital,crear pagina web, diseño web, paginas web, sitios web, ">
   
     
     <meta name="author" content="Blank file">
