--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="title" content="Blank file">
     <meta name="description" content="Blank_File | Crearemos una presencia digital única y atractiva que refleje la identidad de tu marca. Contactate">
   
-    <meta name="keywords" content="blank file, crear pagina web, diseño web en cordoba, diseño web, blank_, quien crea paginas web, paginas web, sitios web, index ">
+    <meta name="keywords" content="diseño web en cordoba, blank file, crear pagina web, diseño web, blank_, quien crea paginas web, paginas web, sitios web, index ">
   
     
     <meta name="author" content="Blank file">
