--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -87,16 +87,16 @@
                  <div class="offcanvas-body d-flex flex-column justify-content-between px-5">
                    <ul class="navbar-nav fs-6 justify-content-end ">
                      <li class="nav-item p-3 py-md-1">
-                       <a href="index.html"  class="nav-link">INICIO</a>
+                       <a href="https://blankfile.com.ar/"  class="nav-link">INICIO</a>
                      </li>
                      <li class="nav-item p-3 py-md-1">
-                       <a href="sobre-nosotros.html" id="a-nosotros" class="nav-link">NOSOTROS</a>
+                       <a href="https://blankfile.com.ar/sobre-nosotros" id="a-nosotros" class="nav-link">NOSOTROS</a>
                      </li>
                      <li class="nav-item p-3 py-md-1">
-                       <a href="blog.html" class="nav-link">BLOG</a>
+                       <a href="https://blankfile.com.ar/blog" class="nav-link">BLOG</a>
                      </li>
                      <li class="nav-item p-3 py-md-1">
-                       <a href="contacto.html" class="nav-link">CONTACTO</a>
+                       <a href="https://blankfile.com.ar/contacto" class="nav-link">CONTACTO</a>
                      </li>
                    </ul>
                    <!-- enlaces redes sociales -->
