--- a/index.html
+++ b/index.html
@@ -86,16 +86,16 @@
          <div class="offcanvas-body d-flex flex-column justify-content-between px-5">
            <ul class="navbar-nav fs-6 justify-content-end ">
              <li class="nav-item p-3 py-md-1">
-               <a href="index.html" id="a-inicio" class="nav-link">INICIO</a>
+               <a href="https://blankfile.com.ar/" id="a-inicio" class="nav-link">INICIO</a>
              </li>
              <li class="nav-item p-3 py-md-1">
-               <a href="sobre-nosotros.html" class="nav-link">NOSOTROS</a>
+               <a href="https://blankfile.com.ar/sobre-nosotros" class="nav-link">NOSOTROS</a>
              </li>
              <li class="nav-item p-3 py-md-1">
-               <a href="blog.html" class="nav-link">BLOG</a>
+               <a href="https://blankfile.com.ar/blog" class="nav-link">BLOG</a>
              </li>
              <li class="nav-item p-3 py-md-1">
-               <a href="contacto.html" class="nav-link">CONTACTO</a>
+               <a href="https://blankfile.com.ar/contacto" class="nav-link">CONTACTO</a>
              </li>
            </ul>
            <!-- enlaces redes sociales -->
@@ -350,7 +350,7 @@
 
          <div class="boton2">
           <div class="col-lg-4 py-2">
-            <a href="contacto.html">
+            <a href="https://blankfile.com.ar/contacto">
                  <button class="cssbuttons-io-button"> crea tu web
                      <div class="icon">
                           <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
