--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 
 
   <header class="" id="header">
-    <nav class="navbar navbar-expand-lg" data-bs-theme="ligth" id="nav">
+    <nav class="navbar navbar-expand-lg" data-bs-theme="dark" id="nav">
       <div class="container">
 
         <a href="https://blankfile.com.ar" class="navbar-brand">
-          <h1 class="sr-only">Diseño web en cordoba</h1>
+          <h1 class="sr-only">paginas web cordoba</h1>
           <img src="assets/blank-logo.png" alt="crear paginas web logo" class="logo">
         </a>
 
@@ -131,73 +131,74 @@
     </nav>
   </header>
 
+  <main>
 
-  <!--baner-->
+    <!--baner-->
 
-  <section class="container-fluid">
+    <section class="container-fluid">
 
-    <div class="row" id="bannertop">
+      <div class="row" id="bannertop">
 
-      <div class="col-lg-7  " id="fondo">
-        <h2>Diseño web que inspira,<br>
-          tecnología que sorprende</h2>
-        <br>
-        <h3>
-          Convierte tus ideas en experiencias digitales únicas.
-        </h3>
-        <div class="row botones pt-3">
-          <div class="col-lg-4 py-5">
-            <a href="#titulo">
-              <button class="cssbuttons-io-button"> ver mas
-                <div class="icon">
-                  <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0 0h24v24H0z" fill="none"></path>
-                    <path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
-                      fill="currentColor"></path>
-                  </svg>
-                </div>
-              </button>
-            </a>
+        <div class="col-lg-7  " id="fondo">
+          <h2>Diseño web que inspira,<br>
+            tecnología que sorprende</h2>
+          <br>
+          <h3>
+            Convierte tus ideas en experiencias digitales únicas.
+          </h3>
+          <div class="row botones ">
+            <div class="col-lg-4 pt-3">
+              <a href="#titulo">
+                <button class="cssbuttons-io-button"> ver mas
+                  <div class="icon">
+                    <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0h24v24H0z" fill="none"></path>
+                      <path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
+                        fill="currentColor"></path>
+                    </svg>
+                  </div>
+                </button>
+              </a>
 
+            </div>
+            <div class="col-lg-4 pt-3">
+              <a href="contacto.html">
+                <button class="cssbuttons-io-button"> crea tu web
+                  <div class="icon">
+                    <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0h24v24H0z" fill="none"></path>
+                      <path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
+                        fill="currentColor"></path>
+                    </svg>
+                  </div>
+                </button>
+              </a>
+            </div>
           </div>
-          <div class="col-lg-4 py-4">
-            <a href="contacto.html">
-              <button class="cssbuttons-io-button"> crea tu web
-                <div class="icon">
-                  <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0 0h24v24H0z" fill="none"></path>
-                    <path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
-                      fill="currentColor"></path>
-                  </svg>
-                </div>
-              </button>
-            </a>
-          </div>
+
         </div>
 
+        <div class="col-lg-4 ">
+
+          <img class="img-fluid" src="assets/p-1.png" alt="diseño web banner">
+        </div>
+
+
       </div>
+    </section>
 
-      <div class="col-lg-4 ">
-
-        <img class="img-fluid" src="assets/p-1.png" alt="diseño web banner">
-      </div>
+    <span class="nada" id="titulo"></span>
 
 
-    </div>
-  </section>
 
-  <span class="nada" id="titulo"></span>
-
-
-  <main>
     <!--intro-->
 
     <section class="intro">
-      <article class="container">
+      <article class="container-fluid">
         <div class="row center-inicio">
-          <div id="intro" class="col-md-9">
+          <div id="intro" class="col-md-7">
             <h2 class="">Diseño y Desarrollo Web a Tu Medida, explora nuestro Universo Digital: </h2>
-            <p class="py-3">
+            <p class="pb-5 pt-5">
               Sitios web corporativos elegantes, tiendas en línea, proyectos personales y portafolios cautivadores.<br>
               Nuestro equipo fusiona creatividad y tecnología para ofrecer diseños innovadores y funcionales que
               reflejen tu visión. <br>
@@ -213,7 +214,7 @@
 
 
     <section class="wait ">
-      <div class=" container">
+      <div class=" container-fluid">
 
         <h3 class="text-center">¿Por qué elegirnos? </h3>
 
@@ -221,7 +222,7 @@
         <div class="row py-5">
 
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-2 col-md-6 col-11">
 
             <div class="circle">
               <i class="fas fa-dollar-sign" style="color: #ffffff;"></i>
@@ -241,7 +242,7 @@
 
           </div>
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-2 col-md-6 col-11">
             <div class="circle">
               <i class="fas fa-history" style="color: #ffffff;"></i>
             </div>
@@ -254,7 +255,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-2 col-md-6 col-11">
             <div class="circle">
               <i class="far fa-heart" style="color: #ffffff;"></i>
             </div>
@@ -267,14 +268,14 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-2 col-md-6 col-11">
             <div class="circle">
               <i class="fas fa-handshake" style="color: #ffffff;"></i>
             </div>
             <div class="contenido">
               <h4>Personal</h4>
               <p>
-                Valoramos cada proyecto y ofrecemos una atención personalizada desde el primer
+                Ofrecemos una atención personalizada desde el primer
                 contacto hasta la entrega del sitio web y más allá. Estamos aquí para escuchar tus ideas y brindarte
                 el apoyo que necesitas.
               </p>
