--- a/index.html
+++ b/index.html
@@ -135,56 +135,58 @@
 
     <!--baner-->
 
-    <section class="container-fluid">
+    <section class="container-fluid" id="banner">
 
-      <div class="row" id="bannertop">
+      <div class="container">
+        <div class="row" id="bannertop">
 
-        <div class="col-lg-7  " id="fondo">
-          <h2>Diseño web que inspira,<br>
-            tecnología que sorprende</h2>
-          <br>
-          <h3>
-            Convierte tus ideas en experiencias digitales únicas.
-          </h3>
-          <div class="row botones ">
-            <div class="col-lg-4 pt-3">
-              <a href="#titulo">
-                <button class="cssbuttons-io-button"> ver mas
-                  <div class="icon">
-                    <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
-                        fill="currentColor"></path>
-                    </svg>
-                  </div>
-                </button>
-              </a>
+          <div class="col-lg-7" id="fondo">
+            <h2>Diseño web que inspira,<br>
+              tecnología que sorprende</h2>
+            <h3>
+              Convierte tus ideas en experiencias digitales únicas.
+            </h3>
+            <div class="row botones">
+              <div class="col-lg-4 py-2">
+                <a href="#titulo">
+                  <button class="cssbuttons-io-button"> ver mas
+                    <div class="icon">
+                      <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"></path>
+                        <path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
+                          fill="currentColor"></path>
+                      </svg>
+                    </div>
+                  </button>
+                </a>
 
+              </div>
+              <div class="col-lg-4 pt-2">
+                <a href="contacto.html">
+                  <button class="cssbuttons-io-button"> crea tu web
+                    <div class="icon">
+                      <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"></path>
+                        <path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
+                          fill="currentColor"></path>
+                      </svg>
+                    </div>
+                  </button>
+                </a>
+              </div>
             </div>
-            <div class="col-lg-4 pt-3">
-              <a href="contacto.html">
-                <button class="cssbuttons-io-button"> crea tu web
-                  <div class="icon">
-                    <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
-                        fill="currentColor"></path>
-                    </svg>
-                  </div>
-                </button>
-              </a>
-            </div>
+
           </div>
 
+          <div class="col-lg-5 ">
+            <img class="img-fluid" src="assets/p-1.png" alt="diseño web banner">
+          </div>
+
+
         </div>
-
-        <div class="col-lg-4 ">
-
-          <img class="img-fluid" src="assets/p-1.png" alt="diseño web banner">
-        </div>
-
-
       </div>
+
+
     </section>
 
     <span class="nada" id="titulo"></span>
@@ -193,12 +195,12 @@
 
     <!--intro-->
 
-    <section class="intro">
+    <section class="intro ">
       <article class="container-fluid">
         <div class="row center-inicio">
-          <div id="intro" class="col-md-7">
-            <h2 class="">Diseño y Desarrollo Web a Tu Medida, explora nuestro Universo Digital: </h2>
-            <p class="pb-5 pt-5">
+          <div id="intro" class="col-lg-7 ">
+            <h2 class="">Diseño y desarrollo web a tu medida, explora nuestro universo digital: </h2>
+            <p class="py-4">
               Sitios web corporativos elegantes, tiendas en línea, proyectos personales y portafolios cautivadores.<br>
               Nuestro equipo fusiona creatividad y tecnología para ofrecer diseños innovadores y funcionales que
               reflejen tu visión. <br>
@@ -222,7 +224,7 @@
         <div class="row py-5">
 
 
-          <div class="col-lg-2 col-md-6 col-11">
+          <div class="col-lg-2 col-md-5 col-11">
 
             <div class="circle">
               <i class="fas fa-dollar-sign" style="color: #ffffff;"></i>
@@ -242,7 +244,7 @@
 
           </div>
 
-          <div class="col-lg-2 col-md-6 col-11">
+          <div class="col-lg-2 col-md-5 col-11">
             <div class="circle">
               <i class="fas fa-history" style="color: #ffffff;"></i>
             </div>
@@ -255,7 +257,7 @@
             </div>
           </div>
 
-          <div class="col-lg-2 col-md-6 col-11">
+          <div class="col-lg-2 col-md-5 col-11">
             <div class="circle">
               <i class="far fa-heart" style="color: #ffffff;"></i>
             </div>
@@ -268,7 +270,7 @@
             </div>
           </div>
 
-          <div class="col-lg-2 col-md-6 col-11">
+          <div class="col-lg-2 col-md-5 col-11">
             <div class="circle">
               <i class="fas fa-handshake" style="color: #ffffff;"></i>
             </div>
@@ -411,16 +413,12 @@
       </div>
     </section>
 
-
-
-
-
     <!--flayers-->
 
     <section class="flayers py-5">
       <div class="container-fluid ">
         <div class="row center-flay">
-          <article class="izq cardi col-lg-4 col-md-3 col-sm-10">
+          <article class="izq cardi col-lg-4 col-md-3 col-10">
             <div class=" content">
               <h5 class="subtitle ">
                 <small>
@@ -428,20 +426,15 @@
                 </small>
               </h5>
               <h3 class="title heading">Destaca en linea con un diseño impactante</h3>
-
-              <span class="hide" id="hideText">
                 <p class="paragraph para">
                   Crearemos una presencia digital única y atractiva que refleje
                   la identidad de tu marca.
                   Una interfaz intuitiva y de estética visual cautivadora.
                 </p>
-              </span>
-
-              <button class="readMore_btn bton" id="hideText_btn">Ver más</button>
             </div>
           </article>
 
-          <article class="low cardi col-lg-4 col-md-3 col-sm-10">
+          <article class="low cardi col-lg-4 col-md-3 col-10">
             <div class="content">
               <h5 class="subtitle">
                 <small>
@@ -449,21 +442,16 @@
                 </small>
               </h5>
               <h3 class="title heading">Tu sitio web visible en todos los dispositivos</h3>
-
-
-              <span class="hide2" id="hideText2">
+     
                 <p class="paragraph para">
                   Diseñamos tu web para que se ajuste a todos los dispositivos,
                   sin perder la calidad y la fluidez de la navegacion.
                   Un rango mas amplio de visitantes.
                 </p>
-              </span>
-
-              <button class="readMore_btn2 bton" id="hideText_btn2">Ver más</button>
-            </div>
+              </div>
           </article>
 
-          <article class="der cardi col-lg-4 col-md-3  col-sm-10">
+          <article class="der cardi col-lg-4 col-md-3  col-10">
             <div class="content">
               <h5 class="subtitle">
                 <small>
@@ -471,15 +459,10 @@
                 </small>
               </h5>
               <h3 class="title heading">Potencia tu presencia en los buscadores </h3>
-
-              <span class="hide3" id="hideText3">
                 <p class="paragraph para">
                   Implementamos estrategias efectivas para posicionar tu sitio en los
                   primeros resultados de busqueda. Atrae mas trafico y aumenta las oportunidades.
                 </p>
-              </span>
-
-              <button class="readMore_btn3 bton" id="hideText_btn3">Ver más</button>
             </div>
           </article>
         </div>
