--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
               <i class="fas fa-dollar-sign" style="color: #ffffff;"></i>
             </div>
             <div class="contenido">
-              <h4>Precio</h4>
+              <h5>Precio</h5>
               <p>
                 Creemos que la calidad no debe comprometerse por el costo,
                 Brindamos un excelente producto por tu inversión.
@@ -249,7 +249,7 @@
               <i class="fas fa-history" style="color: #ffffff;"></i>
             </div>
             <div class="contenido">
-              <h4>Velocidad</h4>
+              <h5>Velocidad</h5>
               <p>
                 Sabemos lo importante que es tu proyecto y nos comprometemos a cumplir con los plazos acordados.
                 Nuestra dedicación a la puntualidad significa que tu sitio web estará listo cuando lo necesites.
@@ -262,7 +262,7 @@
               <i class="far fa-heart" style="color: #ffffff;"></i>
             </div>
             <div class="contenido">
-              <h4>Dedicacion</h4>
+              <h5>Dedicacion</h5>
               <p>
                 Amamos lo que hacemos y por eso lo hacemos bien, cada sitio web que creamos es unico, se adapta a
                 las necesidades de cada cliente y es tratado con la misma dedicacion y seriedad que los demas
@@ -275,7 +275,7 @@
               <i class="fas fa-handshake" style="color: #ffffff;"></i>
             </div>
             <div class="contenido">
-              <h4>Personal</h4>
+              <h5>Personal</h5>
               <p>
                 Ofrecemos una atención personalizada desde el primer
                 contacto hasta la entrega del sitio web y más allá. Estamos aquí para escuchar tus ideas y brindarte
@@ -584,8 +584,9 @@
         </p>
       </div>
 
-      <div class="col-lg-4 col-md-3" id="linkf">
-        <h5><strong>CONTACTO</strong></h5>
+      <div class="col-lg-4 col-md-3 pt-5" id="linkf">
+
+        <h5 class="pt-2"><strong>CONTACTO</strong></h5>
         <hr>
         <ul id="f-contact">
 
