cambio color, botones cards

--- a/index.html
+++ b/index.html
@@ -147,30 +147,18 @@
               Convierte tus ideas en experiencias digitales únicas.
             </h3>
             <div class="row botones">
-              <div class="col-lg-4 py-2">
+              <div class="col-lg-4 col-6 py-3">
                 <a href="#titulo">
-                  <button class="cssbuttons-io-button"> ver mas
-                    <div class="icon">
-                      <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 0h24v24H0z" fill="none"></path>
-                        <path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
-                          fill="currentColor"></path>
-                      </svg>
-                    </div>
+                  <button class="but">
+                    <span class="text">Ver mas</span>
                   </button>
                 </a>
 
               </div>
-              <div class="col-lg-4 pt-2">
+              <div class="col-lg-4 col-6 py-3">
                 <a href="contacto.html">
-                  <button class="cssbuttons-io-button"> crea tu web
-                    <div class="icon">
-                      <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 0h24v24H0z" fill="none"></path>
-                        <path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
-                          fill="currentColor"></path>
-                      </svg>
-                    </div>
+                  <button class="but">
+                    <span class="text">Crea tu web</span>
                   </button>
                 </a>
               </div>
@@ -198,7 +186,7 @@
     <section class="intro ">
       <article class="container-fluid">
         <div class="row center-inicio">
-          <div id="intro" class="col-lg-7 ">
+          <div id="intro" class="col-lg-7 pt-5">
             <h2 class="">Diseño y desarrollo web a tu medida, explora nuestro universo digital: </h2>
             <p class="py-4">
               Sitios web corporativos elegantes, tiendas en línea, proyectos personales y portafolios cautivadores.<br>
@@ -376,14 +364,8 @@
             <div class="boton2">
               <div class="col-lg-4 py-2">
                 <a href="https://blankfile.com.ar/contacto">
-                  <button class="cssbuttons-io-button"> crea tu web
-                    <div class="icon">
-                      <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 0h24v24H0z" fill="none"></path>
-                        <path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
-                          fill="currentColor"></path>
-                      </svg>
-                    </div>
+                  <button class="but">
+                    <span class="text">Estás Listo?</span>
                   </button>
                 </a>
               </div>
@@ -592,7 +574,7 @@
 
           <li>
             <a href="https://api.whatsapp.com/send?phone=+5493521531997&amp;text= Quiero mi pagina web : "
-              target="_blank"><button class="wps"><i class="bi bi-whatsapp px-2  fs-4"></i>3521 531997</button></a>
+              target="_blank"><button class="wps but"><i class="bi bi-whatsapp px-2  fs-4"></i>3521 531997</button></a>
           </li>
           <li>
             <a href="contacto.html"><i class="fas fa-align-justify px-2 fs-4" style="color: #596169;"></i>Formulario de
