--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 
   <header class="" id="header">
-    <nav class="navbar navbar-expand-lg" data-bs-theme="dark" id="nav">
+    <nav class="navbar navbar-expand-lg bg-section-dark " data-bs-theme="dark"  id="nav">
       <div class="container">
 
         <a href="https://blankfile.com.ar" class="navbar-brand">
@@ -135,7 +135,7 @@
 
     <!--baner-->
 
-    <section class="container-fluid" id="banner">
+    <section class="container-fluid " id="banner">
 
       <div class="container">
         <div class="row" id="bannertop">
@@ -461,7 +461,7 @@
 
           <h4 class=""><i class="bi bi-file-earmark-code"></i> Nuestros proyectos</h4>
           <h3 class="py-3">
-            Echa un vistazo<br> a nuestros clientes</h3>
+            Echa un vistazo a nuestros clientes</h3>
           <hr>
 
 
@@ -469,7 +469,7 @@
             <div class="col-lg-4 col-md-6 py-3">
               <a href="https://argonautasrock.com.ar" target="_blank">
                 <img class="" loading="lazy" src="assets/argo-mock.png" alt="argonautas">
-                <h6>Argonautas</h6>
+                <h5 class="text-info">Argonautas</h5>
               </a>
             </div>
             <div class="col-lg-4 col-md-6 py-3">
@@ -551,7 +551,7 @@
   <!--footer-->
   <footer class="footer container-fluid">
 
-    <div class="footer-main row pt-4">
+    <div class="footer-main row pt-5">
 
       <div class=" col-lg-4 col-md-3">
         <img class="img-fluid" src="assets/blank-logo-f.png" alt="footer diseño web logo">
