--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="container">
 
         <a href="https://blankfile.com.ar" class="navbar-brand">
-          <h1 class="sr-only">paginas web cordoba</h1>
+          <h1 class="sr-only">paginas web en cordoba</h1>
           <img src="assets/blank-logo.png" alt="crear paginas web logo" class="logo">
         </a>
 
@@ -137,37 +137,34 @@
 
     <section class="container-fluid " id="banner">
 
-      <div class="container">
+      <div class="container px-5">
         <div class="row" id="bannertop">
 
-          <div class="col-lg-7" id="fondo">
-            <h2>Diseño web que inspira,<br>
-              tecnología que sorprende</h2>
-            <h3>
-              Convierte tus ideas en experiencias digitales únicas.
-            </h3>
-            <div class="row botones">
-              <div class="col-lg-4 col-6 py-3">
+          <div class="col-lg-5" id="fondo">
+            <h2>Diseño web que inspira</h2>
+              <h3 class="text-primary fs-1">tecnología que sorprende</h3>
+            <span class="py-5 fs-5">
+              Convierte tus ideas en experiencias digitales únicas. <br>
+              Creamos tu sitio web atractivo, rapido y moderno.
+            </span>
+            <div class="row botones py-3">
+              <div class="col-lg-5 col-6 py-3">
                 <a href="#titulo">
-                  <button class="but">
-                    <span class="text">Ver mas</span>
-                  </button>
+                  <button type="button" class="btn btn-primary">Ver mas</button>
                 </a>
 
               </div>
-              <div class="col-lg-4 col-6 py-3">
+              <div class="col-lg-5 col-6 py-3">
                 <a href="contacto.html">
-                  <button class="but">
-                    <span class="text">Crea tu web</span>
-                  </button>
+                  <button type="button" class="btn btn-light">Contacto</button>
                 </a>
               </div>
             </div>
 
           </div>
 
-          <div class="col-lg-5 ">
-            <img class="img-fluid" src="assets/p-1.png" alt="diseño web banner">
+          <div class="col-lg-7 ">
+            <img class="img-fluid" src="assets/p-1.png" alt="diseño web">
           </div>
 
 
@@ -176,6 +173,8 @@
 
 
     </section>
+
+    <div class="wave-1"></div>
 
     <span class="nada" id="titulo"></span>
 
@@ -186,7 +185,7 @@
     <section class="intro ">
       <article class="container-fluid">
         <div class="row center-inicio">
-          <div id="intro" class="col-lg-7 pt-5">
+          <div id="intro" class="col-lg-7 pt-3">
             <h2 class="">Diseño y desarrollo web a tu medida, explora nuestro universo digital: </h2>
             <p class="py-4">
               Sitios web corporativos elegantes, tiendas en línea, proyectos personales y portafolios cautivadores.<br>
@@ -364,9 +363,7 @@
             <div class="boton2">
               <div class="col-lg-4 py-2">
                 <a href="https://blankfile.com.ar/contacto">
-                  <button class="but">
-                    <span class="text">Estás Listo?</span>
-                  </button>
+                  <button type="button" class="btn ">Contacto</button>
                 </a>
               </div>
             </div>
